--- a/web/Bienvenido.html
+++ b/web/Bienvenido.html
@@ -29,7 +29,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1 class="Titulo">Sistema de Ventas de Boletos Aereos</h1>       
-    <h3 class="Texto">© Miguel Angel Morales 2016-2017</h3>
+    <h3 class="Texto">© Alejo Torrico</h3>
                
     </body>
 </html>
